@@ -164,6 +164,9 @@
 
       \item \command{Rscript} no longer passes \code{--args} to
       \command{R} when there are no extra (\dQuote{user}) arguments.
+
+      \item objects like \code{getClass("refClass")@prototype} now
+      \code{print()} and \code{str()} without error.
     }
   }
 }
